Feat(hotcode):Adicao de rota para ativar/desativar usuario, melhoramento de protecao de entrada de dados
